# POCO_tutorial_conan_CMake

./: README.md
md5/: CMakeLists.txt  conanfile.txt  md5.cpp
vcm/: CMakeLists.txt  TODO.txt  conanfile.txt
vcm/conf/: any.pem  rootcert.pem
vcm/vcm/: vcm.cpp
